fer-de-lance/tests/negative/invalid_fun_missing_defn.snek
(fun (test 5) ())

(add1 4)
